--- a/4_计算架构与调度.md
+++ b/4_计算架构与调度.md
@@ -114,3 +114,58 @@ SIMD的优势在于控制硬件（如指令获取/调度单元）的成本在许
 > 相同的控制信号（从控制单元到图4.8中处理单元的箭头）传递到多个处理单元，每个处理单元对应于SM中的一个核心，每个核心执行扭曲中的一个线程。
 > 由于所有处理单元都由控制单元的指令寄存器（IR）中的相同指令控制，它们的执行差异在于寄存器文件中不同的数据操作数值。这在处理器设计中称为单指令多数据（SIMD）。例如，尽管所有处理单元（核心）都由一条指令（如加法 r1, r2, r3）控制，但r2和r3的内容在不同处理单元中是不同的。
 > 现代处理器中的控制单元非常复杂，包括用于获取指令的复杂逻辑和访问指令缓存的端口。让多个处理单元共享一个控制单元可以显著减少硬件制造成本和功耗。
+
+
+## 4.5 控制流分歧
+
+当一个扭曲内的所有线程在处理数据时遵循相同的执行路径（正式称为控制流）时，SIMD执行效果很好。例如，对于一个if-else结构，当一个扭曲内的所有线程执行if路径或所有线程执行else路径时，执行效果良好。然而，当一个扭曲内的线程采取不同的控制流路径时，SIMD硬件需要多次通过这些路径，每次通过执行一个路径。例如，对于一个if-else结构，如果一个扭曲内的一些线程遵循if路径，而其他线程遵循else路径，硬件将需要进行两次通过。一遍执行遵循if路径的线程，另一遍执行遵循else路径的线程。在每次通过中，遵循其他路径的线程不被允许生效。
+
+当一个扭曲内的线程遵循不同的执行路径时，我们称这些线程表现出控制分歧，即它们在执行上发生了分歧。多次通过的方法扩展了SIMD硬件实现CUDA线程完整语义的能力。虽然硬件为一个扭曲内的所有线程执行相同的指令，但它有选择地让这些线程仅在与它们所采取的路径相对应的那一遍生效，使得每个线程看起来像是在执行自己的控制流路径。这在保持线程独立性的同时，利用了SIMD硬件的低成本优势。然而，分歧的代价在于硬件需要额外的通过来允许一个扭曲内的不同线程做出自己的决定，以及在每次通过中不活跃线程所消耗的执行资源。
+
+图4.9展示了一个扭曲在执行一个有分歧的if-else语句时的例子。在这个例子中，当由线程0-31组成的扭曲到达if-else语句时，线程0-23走then路径，而线程24-31走else路径。在这种情况下，扭曲将进行一次通过，线程0-23执行A，而线程24-31处于不活跃状态。扭曲还将进行另一遍，通过代码执行线程24-31执行B，而线程0-23处于不活跃状态。然后，扭曲中的线程重新汇合并执行C。在Pascal架构及之前的架构中，这些通过是顺序执行的，即一个通过完成后再执行另一个通过。
+
+![image](https://github.com/user-attachments/assets/b8257dd4-0514-4855-85e2-ed0791e3fa63)
+> 图4.9 if-else语句中的扭曲分歧示例。
+
+从Volta架构开始，这些通过可以并发执行，即一个通过的执行可以与另一个通过的执行交错进行。这个特性被称为独立线程调度。感兴趣的读者可以参考Volta V100架构白皮书（NVIDIA, 2017）了解详情。
+
+分歧也可以出现在其他控制流结构中。图4.10展示了一个扭曲在执行一个有分歧的for循环时的例子。在这个例子中，每个线程执行不同数量的循环迭代，范围从4到8。在前四次迭代中，所有线程都活跃并执行A。在剩余的迭代中，一些线程执行A，而其他线程因为已经完成了迭代而处于不活跃状态。
+
+通过检查决策条件，可以确定一个控制结构是否会导致线程分歧。如果决策条件基于`threadIdx`值，控制语句可能会导致线程分歧。例如，语句`if(threadIdx.x>2) {...}`会导致一个块的第一个扭曲中的线程遵循两个不同的控制流路径。线程0、1和2遵循与线程3、4、5等不同的路径。同样，如果循环条件基于线程索引值，循环也可能导致线程分歧。
+
+使用具有线程控制分歧的控制结构的一个普遍原因是处理将线程映射到数据时的边界条件。这通常是因为线程总数需要是线程块大小的倍数，而数据的大小可以是任意数。回到我们在第2章“异构数据并行计算”中的向量加法内核，我们在`addVecKernel`中有一个`if(i<n)`语句。这是因为并不是所有向量长度都可以表示为块大小的倍数。例如，假设向量长度为1003，而我们选择64作为块大小。需要启动16个线程块来处理所有1003个向量元素。然而，16个线程块将有1024个线程。我们需要禁用第15块中最后21个线程，以避免执行原始程序不期望或不允许的工作。记住，这16个块被分成32个扭曲。只有最后一个扭曲（即最后一个块中的第二个扭曲）会有控制分歧。
+
+![image](https://github.com/user-attachments/assets/fe96b383-a1d8-4780-bc80-6c9ec823f1d9)
+> 图4.10 for循环中的扭曲分歧示例。
+
+请注意，控制分歧的性能影响随着处理向量大小的增加而减少。对于长度为100的向量，四个扭曲中的一个会有控制分歧，这会对性能产生显著影响。对于长度为1000的向量，只有32个扭曲中的一个会有控制分歧。也就是说，控制分歧只会影响约3%的执行时间。即使它使扭曲的执行时间翻倍，对总执行时间的净影响也只有约3%。显然，如果向量长度是10000或更多，313个扭曲中只有一个会有控制分歧。控制分歧的影响将远小于1%。
+
+对于二维数据，例如第3章“多维网格和数据”中的颜色到灰度转换示例，if语句也用于处理在数据边缘操作的线程的边界条件。在图3.2中，为处理62*76的图像，我们使用了20个二维块（4*5），每个块由16*16个线程组成。每个块将被划分为8个扭曲；每个扭曲由两个块的行组成。总共有160个扭曲（每个块8个扭曲）参与处理。要分析控制分歧的影响，请参考图3.5。区域1中的12个块中的所有扭曲都不会有控制分歧。区域1中有12*8=96个扭曲。对于区域2，所有24个扭曲都会有控制分歧。对于区域3，所有底部扭曲映射到图像外的数据。因此，它们都不会通过if条件。读者应验证，如果图片在垂直方向上有奇数个像素，这些扭曲将会有控制分歧。在区域4，前7个扭曲将有控制分歧，但最后一个扭曲不会。总的来说，160个扭曲中有31个会有控制分歧。
+
+同样，控制分歧的性能影响随着水平维度上像素数量的增加而减少。例如，如果我们处理一个200*150的图片，使用16*16块，将总共需要130=13*10个线程块或1040个扭曲。区域1到4中的扭曲数量将分别是864（12*9*8），72（9*8），96（12*8）和8（1*8）。只有80个扭曲会有控制分歧。因此，控制分歧的性能影响将小于8%。显然，如果我们处理一个水平维度上有超过1000个像素的现实图片，控制分歧的性能影响将小于2%。
+
+控制分歧的一个重要影响是，不能假设一个扭曲内的所有线程具有相同的执行时间。因此，如果一个扭曲内的所有线程必须完成执行的一个阶段才能继续到下一阶段，必须使用诸如`__syncwarp()`之类的障碍同步机制来确保正确性。
+
+## 4.6 扭曲调度和延迟容忍
+
+当线程被分配到SM时，通常分配到一个SM的线程数要多于SM中的核心数。也就是说，每个SM在任何时间点上只有足够的执行单元来执行分配给它的所有线程的一个子集。在早期的GPU设计中，每个SM在任何给定时刻只能为一个扭曲执行一条指令。在最近的设计中，每个SM可以在任何时间点为少数几个扭曲执行指令。无论哪种情况，硬件只能为SM中的一部分扭曲执行指令。一个合法的问题是，如果一个SM在任何时间点上只能执行一部分扭曲，为什么需要为一个SM分配这么多扭曲？答案是，这就是GPU如何容忍长延迟操作（如全局内存访问）的方式。
+
+当一个扭曲需要等待先前启动的长延迟操作的结果时，该扭曲不会被选中执行。取而代之的是，另一个不再等待先前指令结果的驻留扭曲将被选中执行。如果有多个扭曲准备好执行，则使用优先级机制选择一个扭曲执行。这种用其他线程的工作填补操作延迟时间的机制通常称为“延迟容忍”或“延迟隐藏”（见“延迟容忍”边栏）。
+
+> ### 延迟容忍
+> 延迟容忍在许多日常情况下是需要的。例如，在邮局，每个人在寄包裹之前都应该已经填写好所有的表格和标签。
+> 然而，正如我们都有过的经历，有些人等待服务柜台的职员告诉他们需要填写哪张表格以及如何填写表格。
+> 当服务柜台前有长队时，最大化服务职员的生产力很重要。让一个人在职员面前填写表格，而所有人都在等待，这不是一个好方法。
+> 职员应该在这个人填写表格时帮助排队等待的下一个顾客。这些其他顾客是“准备好”的，不应该被需要更多时间填写表格的顾客阻挡。
+> 这就是为什么一个好的职员会礼貌地要求第一个顾客走到一边填写表格，而职员服务其他顾客。在大多数情况下，第一个顾客不需要回到队伍的末尾，而是在他或她填写完表格且职员服务完当前顾客后立即得到服务。
+> 我们可以将这些邮局顾客看作是扭曲，将职员看作是硬件执行单元。需要填写表格的顾客对应于一个其继续执行依赖于长延迟操作的扭曲。
+
+请注意，扭曲调度还用于容忍其他类型的操作延迟，例如流水线浮点运算和分支指令。只要有足够多的扭曲，硬件就可能在任何时间点找到一个扭曲执行，从而在一些扭曲的指令等待长延迟操作结果时充分利用执行硬件。选择准备好执行的扭曲不会在执行时间线上引入任何闲置或浪费时间，这称为零开销线程调度（见“线程、上下文切换和零开销调度”边栏）。通过扭曲调度，扭曲指令的长等待时间被通过执行其他扭曲的指令“隐藏”起来。这种容忍长操作延迟的能力是GPU不需要像CPU那样在缓存内存和分支预测机制上投入大量芯片面积的主要原因。因此，GPU可以将更多芯片面积用于浮点执行和内存访问通道资源。
+
+> ### 线程、上下文切换和零开销调度
+> 基于冯·诺依曼模型，我们准备更深入地理解线程是如何实现的。现代计算机中的线程是一个程序和在冯·诺依曼处理器上执行该程序的状态。回想一下，线程由程序代码、正在执行的代码指令和变量及数据结构的值组成。
+> 在基于冯·诺依曼模型的计算机中，程序代码存储在内存中。PC跟踪正在执行的程序指令的地址。IR保存正在执行的指令。寄存器和内存保存变量和数据结构的值。
+> 现代处理器设计允许上下文切换，多个线程可以通过轮流进展来时间共享处理器。通过仔细保存和恢复PC值和寄存器及内存的内容，我们可以暂停线程的执行，并在稍后正确恢复该线程的执行。然而，在这些处理器中，保存和恢复寄存器内容在上下文切换过程中可能会增加显著的执行时间开销。
+> 零开销调度指的是GPU能够在不引入任何额外闲置周期的情况下，让需要等待长延迟指令结果的扭曲休眠，并激活准备好的扭曲。传统CPU会产生这样的闲置周期，因为切换执行线程需要将退出线程的执行状态（如寄存器内容）保存到内存，并从内存加载进入线程的执行状态。GPU的SM通过在硬件寄存器中保存所有分配给扭曲的执行状态，从而在切换扭曲时无需保存和恢复状态，实现了零开销调度。
+
+为了使延迟容忍有效，一个SM被分配的线程数量应远多于其执行资源可以同时支持的线程数量，以最大化在任何时间点找到准备好执行的扭曲的机会。例如，在Ampere A100 GPU中，一个SM有64个核心，但可以同时分配多达2048个线程。因此，SM可以分配的线程数是其核心可以在任何给定时钟周期支持的线程数的32倍。这种对SM的线程超量分配对于延迟容忍至关重要。它增加了当当前执行的扭曲遇到长延迟操作时找到另一个扭曲执行的机会。
