--- a/4_计算架构与调度.md
+++ b/4_计算架构与调度.md
@@ -169,3 +169,143 @@ SIMD的优势在于控制硬件（如指令获取/调度单元）的成本在许
 > 零开销调度指的是GPU能够在不引入任何额外闲置周期的情况下，让需要等待长延迟指令结果的扭曲休眠，并激活准备好的扭曲。传统CPU会产生这样的闲置周期，因为切换执行线程需要将退出线程的执行状态（如寄存器内容）保存到内存，并从内存加载进入线程的执行状态。GPU的SM通过在硬件寄存器中保存所有分配给扭曲的执行状态，从而在切换扭曲时无需保存和恢复状态，实现了零开销调度。
 
 为了使延迟容忍有效，一个SM被分配的线程数量应远多于其执行资源可以同时支持的线程数量，以最大化在任何时间点找到准备好执行的扭曲的机会。例如，在Ampere A100 GPU中，一个SM有64个核心，但可以同时分配多达2048个线程。因此，SM可以分配的线程数是其核心可以在任何给定时钟周期支持的线程数的32倍。这种对SM的线程超量分配对于延迟容忍至关重要。它增加了当当前执行的扭曲遇到长延迟操作时找到另一个扭曲执行的机会。
+
+## 4.7 资源分区与占用率
+
+我们已经看到，为了容忍长延迟操作，向一个SM分配许多扭曲是可取的。然而，不可能总是将SM支持的最大扭曲数分配给SM。分配给一个SM的扭曲数与其支持的最大扭曲数之比称为占用率。为了理解什么可能阻止SM达到最大占用率，首先要了解SM资源是如何分区的。
+
+SM中的执行资源包括寄存器、共享内存（将在第5章内存架构与数据局部性中讨论）、线程块槽和线程槽。这些资源在执行期间动态分配给线程。例如，一个Ampere A100 GPU每个SM可以支持最多32个块、64个扭曲（2048个线程）和每块1024个线程。如果一个网格启动时块大小为1024线程（允许的最大值），则每个SM中的2048个线程槽被分配并分配给2个块。在这种情况下，每个SM可以容纳最多2个块。同样地，如果一个网格启动时块大小为512、256、128或64线程，则2048个线程槽被分配并分配给4、8、16或32个块，分别对应。
+
+这种在块之间动态分配线程槽的能力使SM变得多功能。它们可以执行多个包含少量线程的块，也可以执行少量包含大量线程的块。这种动态分区可以与固定分区方法对比，后者中每个块无论实际需要多少资源都将收到固定数量的资源。固定分区会导致当一个块需要的线程数少于固定分区支持的线程数时浪费线程槽，并且当一个块需要的线程槽数多于固定分区支持的线程槽数时无法支持该块。
+
+资源的动态分区可能导致资源限制之间的微妙交互，这可能导致资源利用不足。这种交互可能发生在块槽和线程槽之间。在Ampere A100的例子中，我们看到块大小可以从1024到64变化，分别导致每个SM有2到32个块。在所有这些情况下，分配给SM的总线程数为2048，从而最大化占用率。然而，考虑每个块有32个线程的情况。在这种情况下，2048个线程槽需要被分配并分配给64个块。然而，Volta SM一次只能支持32个块槽。这意味着只有1024个线程槽会被使用，即32个块，每个块32个线程。这种情况下的占用率为（1024分配的线程）/（2048最大线程）= 50%。因此，为了充分利用线程槽并达到最大占用率，每个块需要至少64个线程。
+
+另一种可能负面影响占用率的情况是每块的最大线程数不能被块大小整除。在Ampere A100的例子中，我们看到每个SM最多可以支持2048个线程。然而，如果选择768的块大小，SM将只能容纳2个线程块（1536个线程），留下512个线程槽未使用。在这种情况下，既没有达到每个SM的最大线程数，也没有达到每个SM的最大块数。此时的占用率为（1536分配的线程）/（2048最大线程）= 75%。
+
+前面的讨论没有考虑其他资源限制的影响，例如寄存器和共享内存。我们将在第5章内存架构与数据局部性中看到，CUDA内核中声明的自动变量被放置在寄存器中。一些内核可能使用许多自动变量，而另一些可能使用很少的自动变量。因此，应预期一些内核每个线程需要许多寄存器，而另一些需要较少的寄存器。通过在SM中动态分配寄存器，SM可以容纳许多块，如果它们每个线程需要的寄存器较少；而如果每个线程需要的寄存器较多，则可以容纳较少的块。
+
+然而，需要注意的是寄存器资源限制对占用率的潜在影响。例如，Ampere A100 GPU每个SM最多允许65536个寄存器。要达到满占用率，每个SM需要足够的寄存器来支持2048个线程，这意味着每个线程不应使用超过（65536个寄存器）/（2048个线程）= 32个寄存器。例如，如果一个内核每个线程使用64个寄存器，65536个寄存器最多可以支持1024个线程。在这种情况下，无论块大小设置为何，该内核都不能达到满占用率。相反，占用率最多为50%。在某些情况下，编译器可能会执行寄存器溢出以减少每个线程的寄存器需求，从而提高占用率。然而，这通常以增加线程访问溢出寄存器值的内存访问时间为代价，可能导致网格的总执行时间增加。类似的分析将在第5章内存架构与数据局部性中进行。
+
+假设程序员实现了一个每个线程使用31个寄存器的内核，并将其配置为每块512个线程。在这种情况下，每个SM将有（2048个线程）/（512个线程/块）= 4个块同时运行。这些线程将使用总计（2048个线程）*（31个寄存器/线程）= 63488个寄存器，少于65536个寄存器限制。现在假设程序员在内核中声明了另外两个自动变量，将每个线程使用的寄存器数增加到33。2048个线程现在需要67584个寄存器，超过寄存器限制。CUDA运行时系统可能会通过为每个SM分配3个块而不是4个块来应对这种情况，从而将所需寄存器减少到50688个寄存器。然而，这会将每个SM上运行的线程数从2048减少到1536；也就是说，通过使用两个额外的自动变量，程序的占用率从100%下降到75%。这有时被称为“性能悬崖”，即资源使用的轻微增加可能导致并行性和性能的显著下降（Ryoo等，2008）。
+
+显然，所有动态分配资源的约束以复杂的方式相互作用。准确确定每个SM上运行的线程数可能是困难的。读者可以参考CUDA占用率计算器（CUDA Occupancy Calculator, Web），这是一张可下载的电子表格，给定内核的资源使用情况，可以计算特定设备实现中每个SM上实际运行的线程数。
+
+## 4.8 查询设备属性
+
+关于SM资源分区的讨论引出了一个重要问题：如何找出特定设备上可用的资源数量？当CUDA应用程序在系统上执行时，如何找到设备中的SM数量以及可以分配给每个SM的块和线程的数量？这些问题也适用于我们尚未讨论的其他资源。一般来说，许多现代应用程序设计为可以在各种硬件系统上执行。通常，应用程序需要查询底层硬件的可用资源和能力，以利用更强大的系统，同时弥补较弱系统的不足（见“资源和能力查询”旁注）。
+
+> 资源和能力查询
+> 在日常生活中，我们经常查询环境中的资源和能力。例如，当我们预订酒店时，可以查看酒店房间的设施。如果房间里有吹风机，我们就不需要带一个。大多数美国酒店房间配备了吹风机，而许多其他地区的酒店则没有。一些亚洲和欧洲酒店提供牙膏甚至牙刷，而大多数美国酒店则没有。许多美国酒店提供洗发水和护发素，而其他大陆的酒店通常只提供洗发水。如果房间里有微波炉和冰箱，我们可以把晚餐的剩菜带回去，期待第二天继续吃。如果酒店有游泳池，我们可以带上泳衣，会议后去游泳。如果酒店没有游泳池但有健身房，我们可以带跑鞋和运动服。一些高端亚洲酒店甚至提供运动服！这些酒店设施是酒店的属性或资源和能力。经验丰富的旅行者会在酒店网站上检查这些属性，选择最符合需求的酒店，从而更高效、有效地打包。
+
+每个CUDA设备的SM中的资源量作为设备的计算能力的一部分进行说明。一般来说，计算能力水平越高，每个SM中的资源越多。GPU的计算能力通常随着代际的增加而增加。Ampere A100 GPU的计算能力为8.0。
+
+在CUDA C中，主机代码有一个内置机制来查询系统中可用设备的属性。CUDA运行时系统（设备驱动程序）提供了一个API函数 `cudaGetDeviceCount`，用于返回系统中可用CUDA设备的数量。主机代码可以使用以下语句找出可用CUDA设备的数量：
+
+```cuda
+int devCount;
+cudaGetDeviceCount(&devCount);
+```
+
+虽然这可能不明显，但现代PC系统通常有两个或更多的CUDA设备。这是因为许多PC系统配备了一个或多个“集成”GPU。这些GPU是默认的图形单元，提供基本的功能和硬件资源，以执行现代窗口化用户界面的最小图形功能。大多数CUDA应用程序在这些集成设备上的表现通常不佳。这是主机代码需要遍历所有可用设备、查询它们的资源和能力，并选择那些有足够资源来执行应用程序以获得令人满意的性能的原因。
+
+CUDA运行时系统将系统中所有可用的设备编号从0到 `devCount-1`。它提供了一个API函数 `cudaGetDeviceProperties`，返回给定设备号的设备属性。例如，我们可以在主机代码中使用以下语句来遍历可用设备并查询它们的属性：
+
+```cuda
+cudaDeviceProp devProp;
+for(unsigned int i = 0; i < devCount; i++) {
+    cudaGetDeviceProperties(&devProp, i);
+    // 决定设备是否具有足够的资源/能力
+}
+```
+
+内置类型 `cudaDeviceProp` 是一个C结构体类型，其字段表示CUDA设备的属性。有关类型的所有字段，读者可以参考CUDA C编程指南。我们将讨论一些与线程执行资源分配特别相关的字段。我们假设属性以 `devProp` 变量返回，字段由 `cudaGetDeviceProperties` 函数设置。如果读者选择使用不同的变量名，则需要在以下讨论中替换适当的变量名。
+
+如名称所示，字段 `devProp.maxThreadsPerBlock` 给出了查询设备中每个块允许的最大线程数。一些设备允许每块最多1024个线程，而其他设备可能允许更少。未来的设备甚至可能允许每块超过1024个线程。因此，查询可用设备并确定哪些设备在每个块中允许足够的线程是一个好主意。
+
+设备中的SM数量由 `devProp.multiProcessorCount` 给出。如果应用程序需要许多SM以实现令人满意的性能，则应检查该属性。此外，设备的时钟频率在 `devProp.clockRate` 中。时钟频率和SM数量的组合可以很好地指示设备的最大硬件执行吞吐量。
+
+主机代码可以在 `devProp.maxThreadsDim[0]`（x维度）、`devProp.maxThreadsDim[1]`（y维度）和 `devProp.maxThreadsDim[2]`（z维度）字段中找到块在每个维度上允许的最大线程数。这些信息的一个示例用途是自动调优系统，在评估最佳执行块维度时设置块维度的范围。类似地，可以在 `devProp.maxGridSize[0]`（x维度）、`devProp.maxGridSize[1]`（y维度）和 `devProp.maxGridSize[2]`（z维度）字段中找到网格在每个维度上允许的最大块数。使用这些信息的一个典型用途是确定网格是否可以拥有足够的线程来处理整个数据集，或者是否需要某种迭代方法。
+
+字段 `devProp.regsPerBlock` 给出了每个SM中可用的寄存器数量。这个字段在确定内核是否能够在特定设备上实现最大占用率或是否会受到寄存器使用限制时非常有用。请注意，字段的名称有点误导。在大多数计算能力水平下，一个块可以使用的最大寄存器数确实与SM中可用的总寄存器数相同。然而，对于某些计算能力水平，块可以使用的最大寄存器数少于SM中总共可用的寄存器数。
+
+我们还讨论了warp的大小取决于硬件。warp的大小可以从 `devProp.warpSize` 字段中获得。
+
+`cudaDeviceProp` 类型中还有许多其他字段。我们将在书中介绍这些字段，同时引入它们设计反映的概念和功能。
+
+## 4.9 总结
+
+GPU 被组织为 SM，其中包含多个核心处理块，这些核心共享控制逻辑和内存资源。当启动一个网格时，其块会以任意顺序分配给 SM，从而实现 CUDA 应用程序的透明可扩展性。然而，这种透明的可扩展性有一个限制：不同块中的线程不能相互同步。
+
+线程按块的基础分配到 SM 上执行。一旦一个块被分配给 SM，它会进一步划分为 warps。warp 中的线程按照 SIMD 模型执行。如果同一个 warp 中的线程由于执行不同的路径而发生分歧，处理块会在每个线程仅在其执行路径对应的 pass 中活跃的情况下执行这些路径。
+
+一个 SM 可能分配了比它能够同时执行的线程数量更多的线程。在任何时刻，SM 只执行其驻留 warps 的一个小子集的指令。这使得其他 warps 可以等待长延迟操作，而不会减慢大量处理单元的整体执行吞吐量。分配给 SM 的线程数量与 SM 能够支持的最大线程数量的比率称为占用率。SM 的占用率越高，它就越能隐藏长延迟操作。
+
+每个 CUDA 设备对每个 SM 中可用资源的数量可能施加不同的限制。例如，每个 CUDA 设备对每个 SM 可以容纳的块数量、线程数量、寄存器数量和其他资源的数量都有一定的限制。对于每个内核，这些资源限制中的一个或多个可能成为占用率的限制因素。CUDA C 提供了查询 GPU 中可用资源的能力，使程序员能够在运行时获取这些信息。
+
+## 练习题
+
+1. 考虑以下 CUDA 内核及其对应的主机函数：
+
+```cuda
+__global__ void foo_kernel(int* a, int* b){
+    unsigned int i = blockIdx.x*blockDim.x + threadIdx.x;
+    if(threadIdx.x < 40 || threadIdx.x >= 104){
+        b[i] = a[i] + 1;
+    }
+    if(unsigned int j = 0; j < 5 - (i%3); ++j){
+      b[i] += j;
+    }
+}
+void foo(int* a_d, int* b_d){
+    unsigned int N = 1024;
+    foo_kernel<<<(N+128-1)/128, 128>>>(a_d,b_d);
+}
+```
+
+a. 每个块中的 warp 数量是多少？
+
+b. 网格中的 warp 数量是多少？
+
+c. 对于第 04 行的语句：
+   * 网格中有多少 warp 是活跃的？
+   * 网格中有多少 warp 是发散的？
+   * 块 0 的 warp 0 的 SIMD 效率是多少（以 % 表示）？
+   * 块 0 的 warp 1 的 SIMD 效率是多少（以 % 表示）？
+   * 块 0 的 warp 3 的 SIMD 效率是多少（以 % 表示）？
+
+d. 对于第 07 行的语句：
+   * 网格中有多少 warp 是活跃的？
+   * 网格中有多少 warp 是发散的？
+   * 块 0 的 warp 0 的 SIMD 效率是多少（以 % 表示）？
+
+e. 对于第 09 行的循环：
+   * 有多少次迭代没有发散？
+   * 有多少次迭代发生了发散？
+
+2. 对于向量加法，假设向量长度为 2000，每个线程计算一个输出元素，线程块的大小为 512 线程。网格中会有多少个线程？
+
+3. 对于上一个问题，预计有多少个 warp 会由于向量长度的边界检查而发生发散？
+
+4. 考虑一个假设的块，有 8 个线程在到达屏障之前执行一段代码。线程执行这些代码段所需的时间（以微秒为单位）为：2.0、2.3、3.0、2.8、2.4、1.9、2.6 和 2.9；其余时间都在等待屏障。线程总执行时间中有多少百分比是花费在等待屏障上的？
+
+5. 一个 CUDA 程序员说，如果他们每个块中只有 32 个线程，他们可以省略 `__syncthreads()` 指令，无需在需要屏障同步的地方使用。你认为这是一个好主意吗？请解释。
+
+6. 如果一个 CUDA 设备的 SM 可以容纳最多 1536 个线程和最多 4 个线程块，那么以下哪种块配置会导致 SM 中线程的数量最多？
+   a. 每块 128 个线程
+   b. 每块 256 个线程
+   c. 每块 512 个线程
+   d. 每块 1024 个线程
+
+7. 假设一个设备允许每个 SM 最多 64 个块和 2048 个线程。指明以下哪些分配是可能的。如果可能，请指明占用率水平。
+   a. 每块 128 线程，共 8 块
+   b. 每块 64 线程，共 16 块
+   c. 每块 32 线程，共 32 块
+   d. 每块 32 线程，共 64 块
+   e. 每块 64 线程，共 32 块
+
+8. 考虑一个 GPU，具有以下硬件限制：每个 SM 2048 个线程，32 个块，以及每个 SM 64K（65,536）寄存器。对于以下每种内核特性，指定该内核是否可以达到全占用率。如果不能，指定限制因素。
+   a. 内核使用每块 128 线程，每线程 30 个寄存器。
+   b. 内核使用每块 32 线程，每线程 29 个寄存器。
+   c. 内核使用每块 256 线程，每线程 34 个寄存器。
+
+9. 一位学生提到，他们使用一个 32x32 的线程块的矩阵乘法内核来乘以两个 1024x1024 的矩阵。学生使用的 CUDA 设备允许每块最多 512 个线程，每个 SM 最多 8 个块。学生进一步提到，每个线程块中的每个线程计算结果矩阵的一个元素。你会有什么反应，为什么？
