--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -126,17 +126,17 @@ CUDA 中共享内存和寄存器之间的一个重要区别是，驻留在共享
 
 在 CUDA 中使用设备内存时，我们面临一个内在的权衡：全局内存大但速度慢，而共享内存小但速度快。一个常见的策略是将数据划分为称为“瓦片”的子集，使每个瓦片可以适应共享内存。瓦片这个术语源于这样一个类比：一个大墙（即全局内存数据）可以被小瓦片（即每个可以适应共享内存的子集）覆盖。一个重要的标准是这些瓦片上的内核计算可以相互独立地进行。需要注意的是，并不是所有数据结构都可以根据任意内核函数被划分为瓦片。
 
-通过第 3 章《多维网格与数据》中的矩阵乘法示例可以说明瓦片的概念。图 3.13 显示了一个小的矩阵乘法示例。它对应于图 3.11 中的内核函数。为了方便参考，我们在图 5.5 中复制了这个示例。为了简洁起见，我们将 `P[y*Width+x]`、`M[y*Width+x]` 和 `N[y*Width+x]` 简写为 `P<sub>y,x</sub>`、`M<sub>y,x</sub>` 和 `N<sub>y,x</sub>`。这个示例假设我们使用 4*2 的块来计算 P 矩阵。P 矩阵中的重框定义了每个块处理的 P 元素。图 5.5 突出了块 `<sub>0,0</sub>` 的四个线程所做的计算。这四个线程计算 `P<sub>0,0</sub>`、`P<sub>0,1</sub>`、`P<sub>1,0</sub>` 和 `P<sub>1,1</sub>`。线程 `<sub>0,0</sub>` 和线程 `<sub>0,1</sub>` 访问 M 和 N 元素的操作用黑色箭头突出显示。例如，线程 `<sub>0,0</sub>` 读取 `M<sub>0,0</sub>` 和 `N<sub>0,0</sub>`，接着是 `M<sub>0,1</sub>` 和 `N<sub>1,0</sub>`，然后是 `M<sub>0,2</sub>` 和 `N<sub>2,0</sub>`，最后是 `M<sub>0,3</sub>` 和 `N<sub>3,0</sub>`。图 5.6 显示了块 `<sub>0,0</sub>` 中所有线程执行的全局内存访问。
+通过第 3 章《多维网格与数据》中的矩阵乘法示例可以说明瓦片的概念。图 3.13 显示了一个小的矩阵乘法示例。它对应于图 3.11 中的内核函数。为了方便参考，我们在图 5.5 中复制了这个示例。为了简洁起见，我们将 `P[y*Width+x]`、`M[y*Width+x]` 和 `N[y*Width+x]` 简写为 P<sub>y,x</sub>、M<sub>y,x</sub> 和 N<sub>y,x</sub>。这个示例假设我们使用 4*2 的块来计算 P 矩阵。P 矩阵中的重框定义了每个块处理的 P 元素。图 5.5 突出了块 <sub>0,0</sub> 的四个线程所做的计算。这四个线程计算 P<sub>0,0</sub>、P<sub>0,1</sub>、P<sub>1,0</sub> 和 P<sub>1,1</sub>。线程 <sub>0,0</sub> 和线程 <sub>0,1</sub> 访问 M 和 N 元素的操作用黑色箭头突出显示。例如，线程 <sub>0,0</sub> 读取 M<sub>0,0</sub> 和 N<sub>0,0</sub>，接着是M<sub>0,1</sub> 和 N<sub>1,0</sub>，然后是 M<sub>0,2</sub> 和 N<sub>2,0</sub>，最后是 M<sub>0,3</sub> 和 N<sub>3,0</sub>。图 5.6 显示了块 <sub>0,0</sub> 中所有线程执行的全局内存访问。
 
 ![image](https://github.com/user-attachments/assets/81c68995-49ef-42f1-b531-54bb305c674c)
-> FIGURE 5.5 矩阵乘法的小示例。为了简洁，我们将 `M[y*Width+x]`、`N[y*Width+x]` 和 `P[y*Width+x]` 显示为 `M<sub>y,x</sub>`、`N<sub>y,x</sub>` 和 `P<sub>y,x</sub>`。
+> FIGURE 5.5 矩阵乘法的小示例。为了简洁，我们将 `M[y*Width+x]`、`N[y*Width+x]` 和 `P[y*Width+x]` 显示为 M<sub>y,x</sub>、N<sub>y,x</sub> 和 P<sub>y,x</sub>。
 
 ![image](https://github.com/user-attachments/assets/0ab45d48-7bd1-44b7-8964-78e96b25dfbb)
-> FIGURE 5.6 块 `<sub>0,0</sub>` 中线程执行的全局内存访问。
+> FIGURE 5.6 块 <sub>0,0</sub> 中线程执行的全局内存访问。
 
-线程按垂直方向列出，访问时间从左到右增加。请注意，每个线程在执行期间访问了四个 M 元素和四个 N 元素。在这四个线程中，它们访问的 M 和 N 元素之间存在显著的重叠。例如，线程 `<sub>0,0</sub>` 和线程 `<sub>0,1</sub>` 都访问了 `M<sub>0,0</sub>` 以及 M 的第 0 行的其余部分。同样，线程 `<sub>0,1</sub>` 和线程 `<sub>1,1</sub>` 都访问了 `N<sub>0,1</sub>` 以及 N 的第 1 列的其余部分。
+线程按垂直方向列出，访问时间从左到右增加。请注意，每个线程在执行期间访问了四个 M 元素和四个 N 元素。在这四个线程中，它们访问的 M 和 N 元素之间存在显著的重叠。例如，线程 <sub>0,0</sub> 和线程 <sub>0,1</sub> 都访问了 M<sub>0,0</sub> 以及 M 的第 0 行的其余部分。同样，线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 都访问了 N<sub>0,1</sub> 以及 N 的第 1 列的其余部分。
 
-图 3.11 中的内核被编写成使线程 `<sub>0,0</sub>` 和线程 `<sub>0,1</sub>` 从全局内存中访问 M 的第 0 行元素。如果我们可以设法让线程 `<sub>0,0</sub>` 和线程 `<sub>0,1</sub>` 协作，使这些 M 元素仅从全局内存中加载一次，我们可以将全局内存访问的总数减少一半。事实上，我们可以看到每个 M 和 N 元素在块 `<sub>0,0</sub>` 执行期间被访问了两次。因此，如果我们可以让所有四个线程在对全局内存的访问中进行协作，我们可以将对全局内存的流量减少一半。
+图 3.11 中的内核被编写成使线程 <sub>0,0</sub> 和线程 <sub>0,1</sub> 从全局内存中访问 M 的第 0 行元素。如果我们可以设法让线程 <sub>0,0</sub> 和线程 <sub>0,1</sub> 协作，使这些 M 元素仅从全局内存中加载一次，我们可以将全局内存访问的总数减少一半。事实上，我们可以看到每个 M 和 N 元素在块 <sub>0,0</sub> 执行期间被访问了两次。因此，如果我们可以让所有四个线程在对全局内存的访问中进行协作，我们可以将对全局内存的流量减少一半。
 
 读者应该验证，在矩阵乘法示例中，全局内存流量的潜在减少与使用的块的维度成正比。使用 `Width*Width` 块时，全局内存流量的潜在减少将是 `Width`。也就是说，如果我们使用 16*16 的块，我们可以通过线程之间的协作将全局内存流量减少到原始水平的 1/16。
 
@@ -148,9 +148,9 @@ CUDA 中共享内存和寄存器之间的一个重要区别是，驻留在共享
 ![image](https://github.com/user-attachments/assets/4168c732-33e8-42c8-baf6-681314230c79)
 > FIGURE 5.8 瓦片矩阵乘法的执行阶段。
 
-在图 5.7 中，我们将 M 和 N 划分为 2*2 的瓦片，如粗线所示。每个线程执行的点积计算现在被分为几个阶段。在每个阶段，块中的所有线程协作将一个 M 瓦片和一个 N 瓦片加载到共享内存中。这可以通过让块中的每个线程将一个 M 元素和一个 N 元素加载到共享内存中来实现，如图 5.8 所示。图 5.8 的每一行显示了一个线程的执行活动。注意时间从左到右推进。我们只需显示块 `<sub>0,0</sub>` 中线程的活动；其他块具有相同的行为。M 元素的共享内存数组称为 Mds。N 元素的共享内存数组称为 Nds。在第 1 阶段开始时，块 `<sub>0,0</sub>` 的四个线程协作将 M 的一个瓦片加载到共享内存中：线程 `<sub>0,0</sub>` 将 `M<sub>0,0</sub>` 加载到 `Mds<sub>0,0</sub>` 中，线程 `<sub>0,1</sub>` 将 `M<sub>0,1</sub>` 加载到 `Mds<sub>0,1</sub>` 中，线程 `<sub>1,0</sub>` 将 `M<sub>1,0</sub>` 加载到 `Mds<sub>1,0</sub>` 中，线程 `<sub>1,1</sub>` 将 `M<sub>1,1</sub>` 加载到 `Mds<sub>1,1</sub>` 中。这些加载操作显示在图 5.8 的第二列。N 的一个瓦片也以类似的方式加载，如图 5.8 的第三列所示。
+在图 5.7 中，我们将 M 和 N 划分为 2*2 的瓦片，如粗线所示。每个线程执行的点积计算现在被分为几个阶段。在每个阶段，块中的所有线程协作将一个 M 瓦片和一个 N 瓦片加载到共享内存中。这可以通过让块中的每个线程将一个 M 元素和一个 N 元素加载到共享内存中来实现，如图 5.8 所示。图 5.8 的每一行显示了一个线程的执行活动。注意时间从左到右推进。我们只需显示块 <sub>0,0</sub> 中线程的活动；其他块具有相同的行为。M 元素的共享内存数组称为 Mds。N 元素的共享内存数组称为 Nds。在第 1 阶段开始时，块 <sub>0,0</sub> 的四个线程协作将 M 的一个瓦片加载到共享内存中：线程 <sub>0,0</sub> 将 M<sub>0,0</sub> 加载到 Mds<sub>0,0</sub> 中，线程 <sub>0,1</sub> 将 M<sub>0,1</sub> 加载到 Mds<sub>0,1</sub> 中，线程 <sub>1,0</sub> 将 M<sub>1,0</sub> 加载到 Mds<sub>1,0</sub> 中，线程 <sub>1,1</sub> 将 M<sub>1,1</sub> 加载到 Mds<sub>1,1</sub> 中。这些加载操作显示在图 5.8 的第二列。N 的一个瓦片也以类似的方式加载，如图 5.8 的第三列所示。
 
-在两个 M 和 N 瓦片加载到共享内存后，这些元素将在点积计算中使用。请注意，共享内存中的每个值被使用了两次。例如，由线程 `<sub>1,1</sub>` 加载到 `Mds<sub>1,1</sub>` 的 `M<sub>1,1</sub>` 值被线程 `<sub>1,0</sub>` 和线程 `<sub>1,1</sub>` 各使用一次。通过将每个全局内存值加载到共享内存中，使其可以被多次使用，我们减少了对全局内存的访问次数。在这种情况下，我们将对全局内存的访问次数减少了 2 倍。读者应该验证，如果瓦片是 `N*N` 元素，则减少的倍数为 N。
+在两个 M 和 N 瓦片加载到共享内存后，这些元素将在点积计算中使用。请注意，共享内存中的每个值被使用了两次。例如，由线程 <sub>1,1</sub> 加载到 Mds<sub>1,1</sub> 的 M<sub>1,1</sub> 值被线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 各使用一次。通过将每个全局内存值加载到共享内存中，使其可以被多次使用，我们减少了对全局内存的访问次数。在这种情况下，我们将对全局内存的访问次数减少了 2 倍。读者应该验证，如果瓦片是 `N*N` 元素，则减少的倍数为 N。
 
 请注意，每个点积的计算现在分为两个阶段，如图 5.8 中的阶段 1 和阶段 2 所示。在每个阶段，每个线程将输入矩阵元素的两个对的乘积累加到 `Pvalue` 变量中。请注意，`Pvalue` 是一个自动变量，因此为每个线程生成了一个私有版本。我们添加了下标
 
