--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -161,3 +161,70 @@ CUDA 中共享内存和寄存器之间的一个重要区别是，驻留在共享
 这些阶段的创建是减少对全局内存访问的关键。每个阶段关注输入矩阵值的小子集，线程可以协作地将子集加载到共享内存中，并使用共享内存中的值来满足它们在该阶段的重叠输入需求。
 
 还要注意，Mds 和 Nds 在各阶段之间被重复使用。在每个阶段，相同的 Mds 和 Nds 被重复使用来存放该阶段使用的 M 和 N 元素的子集。这允许更小的共享内存服务于大多数全局内存访问。这是因为每个阶段关注输入矩阵元素的小子集。这种集中访问行为称为局部性。当算法表现出局部性时，有机会使用小的高速内存来服务大多数访问，并将这些访问从全局内存中移除。局部性对于实现多核 CPU 和许多线程 GPU 的高性能同样重要。我们将在第 6 章《性能考虑》中回到局部性概念。
+
+## 5.4 瓦片矩阵乘法内核
+
+```cuda
+#define TILE_WIDTH 16
+__global__ void matrixMulKernel(float* M, float* N, float* P, int Width){
+    __shared__ float Mds[TILE_WIDTH][TILE_WIDTH];
+    __shared__ float Nds[TILE_WIDTH][TILE_WIDTH];
+
+    int bx = blockIdx.x; int by = blockIdx.y;
+    int tx = threadIdx.x; int ty = threadIdx.y;
+
+    // 确定要计算的 P 元素的行和列
+    int Row = by * TILE_WIDTH + ty;
+    int Col = bx * TILE_WIDTH + tx;
+
+    // 遍历计算 P 元素所需的 M 和 N 瓦片
+    float Pvalue = 0;
+    for (int ph = 0; ph < Width/TILE_WIDTH; ++ph){
+
+        // 协作地将 M 和 N 瓦片加载到共享内存中
+        Mds[ty][tx] = M[Row*Width + ph*TILE_WIDTH + tx];
+        Nds[ty][tx] = N[(ph*TILE_WIDTH + ty)*Width + Col];
+        __syncthreads();
+
+        for (int k = 0; k < TILE_WIDTH; ++k){
+            Pvalue += Mds[ty][k] * Nds[k][tx];
+        }
+        __syncthreads();
+    }
+    P[Row*Width + Col] = Pvalue;
+}
+```
+> FIGURE 5.9 使用共享内存的瓦片矩阵乘法内核。
+
+我们现在可以展示一个使用共享内存来减少对全局内存访问的瓦片矩阵乘法内核。图 5.9 中的内核实现了图 5.8 中的各个阶段。在图 5.9 中，第 04 和第 05 行分别声明了 `Mds` 和 `Nds` 为共享内存数组。请记住，共享内存变量的作用域是一个块。因此，每个块将创建一个 `Mds` 和 `Nds` 数组的版本，并且块中的所有线程都可以访问相同的 `Mds` 和 `Nds` 版本。这很重要，因为块中的所有线程必须访问由它们的同伴加载到 `Mds` 和 `Nds` 中的 M 和 N 元素，以便它们可以使用这些值来满足它们的输入需求。
+
+第 07 和第 08 行将 `threadIdx` 和 `blockIdx` 的值保存到短名称的自动变量中，以使代码更加简洁。请记住，自动标量变量被放入寄存器中。它们的作用域在每个线程中。也就是说，运行时系统为每个线程创建了一个私有版本的 `tx`、`ty`、`bx` 和 `by`，并将其存储在线程可以访问的寄存器中。这些变量被初始化为 `threadIdx` 和 `blockIdx` 的值，并在线程的生命周期内多次使用。一旦线程结束，这些变量的值就会消失。
+
+第 11 和第 12 行分别确定了线程要生成的 P 元素的行索引和列索引。代码假设每个线程负责计算一个 P 元素。如第 12 行所示，线程生成的 P 元素的水平（x）位置或列索引可以计算为 `bx*TILE_WIDTH+tx`。这是因为每个块在水平维度上覆盖了 `TILE_WIDTH` 个 P 元素。块 `bx` 中的一个线程之前会有 `bx` 个线程块，即 (`bx*TILE_WIDTH`) 个线程，它们覆盖了 `bx*TILE_WIDTH` 个 P 元素。同样，块中的另一个 `tx` 线程会覆盖 `tx` 个其他元素。因此，具有 `bx` 和 `tx` 的线程应负责计算其 x 索引为 `bx*TILE_WIDTH+tx` 的 P 元素。例如，在图 5.7 中，块 `<sub>1,0</sub>` 中线程 `<sub>0,1</sub>` 计算的 P 元素的水平（x）索引是 0*2+1=1。这个水平索引保存在线程的变量 `Col` 中，并且在图 5.10 中也有所说明。
+
+![image](https://github.com/user-attachments/assets/0b18bfe3-731a-497c-aa5a-972d5da12cfe)
+> FIGURE 5.10 瓦片乘法中的矩阵索引计算。
+
+类似地，线程处理的 P 元素的垂直（y）位置或行索引计算为 `by*TILE_WIDTH+ty`。回到图 5.7 的示例，块 `<sub>1,0</sub>` 中线程 `<sub>0,1</sub>` 计算的 P 元素的 y 索引是 1*2+0=2。这个垂直索引保存在线程的变量 `Row` 中。如图 5.10 所示，每个线程计算位于 `Col` 列和 `Row` 行的 P 元素。因此，块 `<sub>1,0</sub>` 中线程 `<sub>0,1</sub>` 计算的 P 元素是 `P<sub>2,1</sub>`。
+
+图 5.9 的第 16 行标志着循环的开始，该循环遍历计算 P 元素的所有阶段。循环的每次迭代对应于图 5.8 中显示的一个计算阶段。`ph` 变量表示点积计算中已经完成的阶段数。请记住，每个阶段使用一个 M 瓦片和一个 N 瓦片。因此，在每个阶段开始时，`ph*TILE_WIDTH` 对 M 和 N 元素的配对已经由之前的阶段处理过。
+
+在每个阶段中，图 5.9 的第 19 和第 20 行分别将适当的 M 和 N 元素加载到共享内存中。由于我们已经知道线程要处理的 M 的行和 N 的列，现在我们关注 M 的列索引和 N 的行索引。如图 5.10 所示，每个块有 `TILE_WIDTH<sup>2</sup>` 个线程，将协作加载 `TILE_WIDTH<sup>2</sup>` 个 M 元素和 `TILE_WIDTH<sup>2</sup>` 个 N 元素到共享内存中。因此，我们需要做的就是将每个线程分配一个 M 元素和一个 N 元素。通过使用 `blockIdx` 和 `threadIdx` 可以方便地完成这个任务。请注意，加载的 M 元素的部分的起始列索引是 `ph*TILE_WIDTH`。因此，一个简单的方法是让每个线程加载与起始点相距 `tx`（即 `threadIdx.x` 值）的位置的元素。类似地，加载的 N 元素的部分的起始行索引也是 `ph*TILE_WIDTH`。因此，每个线程加载与起始点相距 `ty`（即 `threadIdx.y` 值）的位置的元素。
+
+这正是第 19 和第 20 行所做的。在第 19 行，每个线程加载 `M[Row*Width + ph*TILE_WIDTH + tx]`，其中线性索引由行索引 `Row` 和列索引 `ph*TILE_WIDTH + tx` 形成。由于 `Row` 的值是 `ty` 的线性函数，因此 `TILE_WIDTH<sup>2</sup>` 个线程将每个线程加载到共享内存中的 M 元素是唯一的，因为每个线程具有唯一的 `tx` 和 `ty` 组合。一起，这些线程将加载图 5.10 中 M 的一个深色方块子集。类似地，在第 20 行，每个线程使用线性索引 (`ph*TILE_WIDTH + ty)*Width + Col` 将适当的 N 元素加载到共享内存中。读者应使用图 5.7 和图 5.8 中的小示例来验证地址计算是否对个别线程有效。
+
+第 21 行的屏障 `__syncthreads()` 确保所有线程在任何线程可以继续之前，已经完成了将 M 和 N 瓦片加载到 `Mds` 和 `Nds` 中。回顾第 4 章《计算架构与调度》，可以使用 `__syncthreads()` 来使块中的所有线程在任何线程可以继续之前等待彼此到达屏障。这很重要，因为线程使用的 M 和 N 元素可能被其他线程加载。需要确保所有元素在任何线程开始使用这些元素之前已经正确地加载到共享内存中。第 23 行的循环基于瓦片元素执行一个点积计算阶段。线程 `<sub>ty, tx</sub>` 的循环进度显示在图 5.10 中，M 和 N 元素的访问方向沿着箭头标记为 k，即第 23 行中的循环变量。请注意，这些元素将从 `Mds` 和 `Nds` 共享内存数组中访问，这些数组存储这些 M 和 N 元素。第 26 行的屏障 `__syncthreads()` 确保所有线程在任何线程开始下一次迭代并加载下一个瓦片的元素之前，已经完成了对共享内存中 M 和 N 元素的使用。因此，没有线程会过早地加载元素，从而破坏其他线程的输入值。
+
+第 21 行和第 26 行的两个 `__syncthreads()` 调用演示了并行程序员在协调线程之间时常常需要考虑的两种数据依赖性。第一个称为读后写依赖性，因为线程必须等待其他线程将数据写入适当的位置，然后才能尝试读取它。第二个称为写后读依赖性，因为线程必须等待所有需要数据的线程读取数据后才能覆盖它。读后写和写后读依赖性的其他名称分别是真依赖性和假依赖性。读后写依赖性是真依赖性，因为读取线程确实需要写入线程提供的数据，所以它别无选择，只能等待。写后读依赖性是假依赖性，因为写入线程不需要读取线程的数据。依赖性是由它们重复使用相同的内存位置引起的，如果它们使用不同的位置，则不会存在这种依赖性。
+
+第 16 行到第 28 行的循环嵌套演示了一种称为带状划分的技术，该技术将一个长期运行的循环分解为多个阶段。每个阶段涉及一个内循环，该内循环执行原始循环的几个连续迭代。原始循环变成一个外循环，其作用是迭代地调用内循环，以便按原始顺序执行原始循环的所有迭代。通过在内循环之前和之后添加屏障同步，我们强制同一块中的所有线程在每个阶段专注于相同的输入数据部分。带状划分是创建数据并行程序中所需阶段的重要手段。
+
+在所有点积计算阶段完成后，执行退出外循环。在第 29 行，所有线程使用从 `Row` 和 `Col` 计算的线性索引写入它们的 P 元素。
+
+瓦片算法的好处是显著的。对于矩阵乘法，全球内存访问减少了 `TILE_WIDTH` 的倍数。使用 16*16 的瓦片，可以将全局内存访问减少 16 倍。这将计算与全局内存访问的比率从 0.25 OP/B 提高到 4 OP/B。这一改进使得 CUDA 设备的内存带宽能够支持更高的计算速率。例如，在具有 1555 GB/秒全局内存带宽的 A100 GPU 中，这一改进使得设备能够实现 (1555 GB/秒)*(4 OP/B)=6220 GFLOPS，这大大高于未使用瓦片的内核所实现的 389 GFLOPS。
+
+尽管瓦片提高了吞吐量，但 6220 GFLOPS 仍然仅为设备 19,500 GFLOPS 峰值吞吐量的 32%。可以进一步优化代码以减少全局内存访问并提高吞吐量。我们将在本书的后面部分看到一些这些优化，而其他高级优化将不会被涵盖。由于矩阵乘法在许多领域的重要性，已经有许多高度优化的库，如 `cuBLAS` 和 `CUTLASS`，它们已经包含了许多这些高级优化。程序员可以使用这些库来立即在其线性代数应用程序中接近峰值性能。
+
+瓦片在提高矩阵乘法以及应用程序的一般吞吐量方面的有效性并不仅仅局限于 GPU。将瓦片（或块）技术应用于提高 CPU 性能的历史悠久，通过确保 CPU 线程在特定时间窗口内重用的数据将会在缓存中找到。一个关键的区别是，CPU 上的瓦片技术依赖于 CPU 缓存隐式地将重用的数据保留在芯片上，而 GPU 上的瓦片技术则明确地使用共享内存来将数据保留在芯片上。原因在于 CPU 核心通常一次运行一个或两个线程，因此线程可以依赖缓存保持最近使用的数据。相比之下，GPU SM 同时运行多个线程以隐藏延迟。这些线程可能会争夺缓存槽，这使得 GPU 缓存不那么可靠，因此需要使用共享内存来存储需要重用的重要数据。
+
+尽管带状矩阵乘法内核的性能提升令人印象深刻，但它确实做出了一些简化假设。首先，假设矩阵的宽度是线程块宽度的倍数。这会阻止内核正确处理宽度为任意值的矩阵。第二个假设是矩阵是方形矩阵。这在实践中并不总是如此。在下一节中，我们将展示一个带有边界检查的内核，以去除这些假设。
