--- a/5_内存架构与数据局部性.md
+++ b/5_内存架构与数据局部性.md
@@ -228,3 +228,57 @@ __global__ void matrixMulKernel(float* M, float* N, float* P, int Width){
 瓦片在提高矩阵乘法以及应用程序的一般吞吐量方面的有效性并不仅仅局限于 GPU。将瓦片（或块）技术应用于提高 CPU 性能的历史悠久，通过确保 CPU 线程在特定时间窗口内重用的数据将会在缓存中找到。一个关键的区别是，CPU 上的瓦片技术依赖于 CPU 缓存隐式地将重用的数据保留在芯片上，而 GPU 上的瓦片技术则明确地使用共享内存来将数据保留在芯片上。原因在于 CPU 核心通常一次运行一个或两个线程，因此线程可以依赖缓存保持最近使用的数据。相比之下，GPU SM 同时运行多个线程以隐藏延迟。这些线程可能会争夺缓存槽，这使得 GPU 缓存不那么可靠，因此需要使用共享内存来存储需要重用的重要数据。
 
 尽管带状矩阵乘法内核的性能提升令人印象深刻，但它确实做出了一些简化假设。首先，假设矩阵的宽度是线程块宽度的倍数。这会阻止内核正确处理宽度为任意值的矩阵。第二个假设是矩阵是方形矩阵。这在实践中并不总是如此。在下一节中，我们将展示一个带有边界检查的内核，以去除这些假设。
+
+## 5.5 边界检查
+
+我们现在将瓦片矩阵乘法内核扩展到处理任意宽度的矩阵。这些扩展将允许内核正确处理宽度不是瓦片宽度倍数的矩阵。让我们将图 5.7 中的小示例更改为使用 3x3 的 M、N 和 P 矩阵。修订后的示例如图 5.11 所示。注意，矩阵的宽度为 3，这不是瓦片宽度（2）的倍数。图 5.11 显示了块 `<sub>0,0</sub>` 第二阶段的内存访问模式。我们可以看到，线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 将尝试加载不存在的 M 元素。同样，我们也看到线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 将尝试访问不存在的 N 元素。
+
+> 图 5.11 加载接近边缘的输入矩阵元素：块 <sub>0,0</sub> 的阶段。
+
+访问不存在的元素存在两种问题。首先，访问超出行末尾的不存在元素（图 5.11 中线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 的 M 访问）会导致这些访问错误地访问了不正确的元素。在我们的示例中，这些线程会尝试访问 M<sub>0,3</sub> 和 M<sub>1,3</sub>，这些元素并不存在。那么这些内存加载会发生什么？为了回答这个问题，我们需要回到二维矩阵的线性化布局。
+
+在线性化布局中，M<sub>0,2</sub> 后面的元素是 M<sub>1,0</sub>。虽然线程 <sub>0,1</sub> 正在尝试访问 M<sub>0,3</sub>，但它最终会得到 M<sub>1,0</sub>。在随后的内积计算中使用这个值显然会破坏输出值。
+
+在访问超出列末尾的元素时也会出现类似的问题（图 5.11 中线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 的 N 访问）。这些访问指向数组分配区域之外的内存位置。在某些系统中，它们会返回来自其他数据结构的随机值。在其他系统中，这些访问会被拒绝，导致程序中断。无论哪种情况，这种访问的结果都是不可取的。
+
+从我们到目前为止的讨论来看，可能会觉得问题访问仅出现在线程执行的最后阶段。这表明我们可以通过在瓦片内核执行的最后阶段采取特别措施来处理这个问题。不幸的是，事实并非如此。问题访问可以出现在所有阶段。图 5.12 显示了块 <sub>1,1</sub> 在阶段 0 的内存访问模式。我们看到线程 <sub>1,0</sub> 和线程 <sub>1,1</sub> 尝试访问不存在的 M 元素 M<sub>3,0</sub> 和 M<sub>3,1</sub>，而线程 <sub>0,1</sub> 和线程 <sub>1,1</sub> 尝试访问不存在的 N 元素 N<sub>0,3</sub> 和 N<sub>1,3</sub>。
+
+> 图 5.12 在块 <sub>1,1</sub> 的阶段 0 中加载输入元素。
+
+注意，这些问题访问不能仅通过排除不计算有效 P 元素的线程来避免。例如，块 <sub>1,1</sub> 中的线程 <sub>1,0</sub> 不计算任何有效的 P 元素。然而，它需要在阶段 0 中加载 M<sub>2,1</sub> 以供块 <sub>1,1</sub> 中的其他线程使用。此外，注意到一些计算有效 P 元素的线程会尝试访问不存在的 M 或 N 元素。例如，如图 5.11 所示，块 <sub>0,0</sub> 中的线程 <sub>0,1</sub> 计算了一个有效的 P 元素 P<sub>0,1</sub>。然而，它在阶段 1 中尝试访问不存在的 M<sub>0,3</sub>。这两个事实表明，我们需要对加载 M 瓦片、加载 N 瓦片以及计算/存储 P 元素使用不同的边界条件测试。一个经验法则是，每个内存访问都需要有一个相应的检查，以确保访问中使用的索引在被访问的数组的边界内。
+
+让我们从加载输入瓦片的边界测试条件开始。当一个线程要加载一个输入瓦片元素时，它应该测试要加载的输入元素是否有效。这可以通过检查 y 和 x 索引来轻松完成。例如，在图 5.9 的第 19 行中，线性索引是由行索引 `Row` 和 x 索引 `ph*TILE_WIDTH+tx` 计算得出的。边界条件测试是：两个索引都小于 `Width`：`Row < Width && (ph*TILE_WIDTH+tx) < Width`。如果条件为真，线程应该继续加载 M 元素。读者应验证加载 N 元素的条件测试是 `(ph*TILE_WIDTH+ty) < Width && Col < Width`。
+
+如果条件为假，线程不应加载该元素。问题是应该在共享内存位置放置什么。答案是 0.0，这是一个在内积计算中使用不会造成任何危害的值。如果任何线程在其内积计算中使用这个 0.0 值，内积值将不会发生变化。
+
+最后，线程应该仅在负责计算有效 P 元素时才存储其最终的内积值。对此条件的测试是 `(Row < Width) && (Col < Width)`。具有附加边界条件检查的内核代码如图 5.13 所示。
+
+```cuda
+// 遍历计算 P 元素所需的 M 和 N 瓦片
+float Pvalue = 0;
+for (int ph; ph < ceil(Width/(float)TILE_WIDTH); ++ph){
+  // 协作地将 M 和 N 瓦片加载到共享内存中
+  if ((Row < Width) && (ph*TILE_WIDTH+tx) < Width){
+    Mds[ty][tx] = M[Row*TILE_WIDTH + ph*TILE_WIDTH + tx];
+    }
+  else Mds[ty][tx] = 0.0f;
+  if ((ph*TILE_WIDTH+ty) < Width && Col < Width){
+    Nds[ty][tx] = N[(ph*TILE_WIDTH + ty)*Width + Col];
+  else Nds[ty][tx] = 0.0f;
+  __syncthreads();
+  }
+
+  for (int k = 0; k < TILE_WIDTH; ++k){
+    Pvalue += Mds[ty][k] * Nds[k][tx];
+  }
+  __syncthreads();
+}
+if (Row < Width) && (Col < Width){
+  P[Row*Width + Col] = Pvalue};
+```
+
+通过边界条件检查，瓦片矩阵乘法内核只差一步就成为通用矩阵乘法内核。一般来说，矩阵乘法定义为矩形矩阵：一个 j×k 的 M 矩阵乘以一个 k×l 的 N 矩阵会得到一个 j×l 的 P 矩阵。我们的内核目前只能处理方形矩阵。
+
+> 图 5.13 带有边界条件检查的瓦片矩阵乘法内核。
+
+幸运的是，将我们的内核进一步扩展为通用矩阵乘法内核非常简单。我们需要做一些简单的更改。首先，将 `Width` 参数替换为三个无符号整数参数：`j`、`k` 和 `l`。其中，`Width` 用于表示 M 的高度或 P 的高度时，用 `j` 替换它；`Width` 用于表示 M 的宽度或 N 的高度时，用 `k` 替换它；`Width` 用于表示 N 的宽度或 P 的宽度时，用 `l` 替换它。具有这些更改的内核修订留作练习。
